--- a/website/pages/docs/utilization/nestjs.mdx
+++ b/website/pages/docs/utilization/nestjs.mdx
@@ -5,7 +5,7 @@
   - `@nestia/migrate`: Swagger to NestJS
   - `nestia`: just CLI (command line interface) tool
 
-```typescript showLineNumbers {14, 16}
+```typescript copy showLineNumbers {14, 16}
 import { Controller } from "@nestjs/common";
 import { TypedBody, TypedRoute } from "@nestia/core";
 
