--- a/website/pages/docs/utilization/trpc.mdx
+++ b/website/pages/docs/utilization/trpc.mdx
@@ -1,4 +1,4 @@
-```typescript showLineNumbers {11-12}
+```typescript copy showLineNumbers {11-12}
 import { initTRPC } from "@trpc/server";
 import { v4 } from "uuid";
 import typia from "typia";
