--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -38,7 +38,7 @@ import Stack from '@mui/material/Stack';
 ))}
 </span>
 
-```typescript
+```typescript copy
 // RUNTIME VALIDATORS
 export function is<T>(input: unknown | T): input is T; // returns boolean
 export function assert<T>(input: unknown | T): T; // throws TypeGuardError
