Add twitter meta tags

--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -4,6 +4,8 @@ import Stack from '@mui/material/Stack';
 
 ## Outline
 
+![Typia Logo](/logo.png)
+
 <span style={{ display: "flex", flexDirection: "row" }}>
 {[
     [
