--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -6,6 +6,8 @@ import Stack from '@mui/material/Stack';
 
 ## Outline
 
+![Typia Logo](/logo.png)
+
 <span style={{ display: "flex", flexDirection: "row" }}>
 {[
     [
