--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -125,10 +125,11 @@ Just configure `vite.config.ts` file below, that's all.
 ```typescript copy filename="vite.config.ts"
 import { defineConfig } from 'vite'
 import react from '@vitejs/plugin-react'
-import typescript from "@rollup/plugin-typescript";
+import typescript from "rollup-plugin-typescript2";
 
 // https://vitejs.dev/config/
 export default defineConfig({
+  esbuild: false,
   plugins: [
     react(),
     typescript()
