--- a/website/pages/docs/pure.mdx
+++ b/website/pages/docs/pure.mdx
@@ -653,3 +653,7 @@ exports.assertArticle = assertArticle;
 ```
     </Tab>
 </Tabs>
+
+![Assert Function Benchmark](https://github.com/samchon/typia/raw/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz/images/assert.svg)
+
+> Measured on [Intel i5-1135g7, Surface Pro 8](https://github.com/samchon/typia/tree/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz#assert)
