Fix typo in assert.mdx
missing grave accent mark

--- a/website/pages/docs/validators/assert.mdx
+++ b/website/pages/docs/validators/assert.mdx
@@ -207,7 +207,7 @@ More strict assert function prohibiting superfluous properties.
 
 In the below example case, as `sex` property is not defined in the `IMember` type, such `TypeGuardError` would be thrown:
 
-  - `method: `typia.assertEquals()`
+  - `method`: `typia.assertEquals()`
   - `path`: `input.sex`
   - `value`: `1`,
   ` expected`: `undefined`
