Fix #701 - `@format url` in docs

--- a/website/pages/docs/validators/comment-tags.mdx
+++ b/website/pages/docs/validators/comment-tags.mdx
@@ -111,6 +111,7 @@ I think below list is not hard to understand.
       - `uuid`
       - `ipv4`
       - `ipv6`
+      - `url`
       - `date`: YYYY-MM-DD
       - `date-time`: `Date.toISOString()`
   - array
