--- a/website/pages/docs/json/schema.mdx
+++ b/website/pages/docs/json/schema.mdx
@@ -294,6 +294,7 @@ Let's see how those comment tags work with example code.
         - `uuid`
         - `ipv4`
         - `ipv6`
+        - `url`
         - `date`: YYYY-MM-DD
         - `date-time`: `Date.toISOString()`
     - array
